# paw-board

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
ble_hid_device_demo/main/: CMakeLists.txt  ble_hidd_demo_main.c  sensor_reader.c  sensor_reader.h
components/ble_hid_device_demo/: CMakeLists.txt  ble_hidd_demo_main.c  demo_main.h  esp_hidd_prf_api.c  esp_hidd_prf_api.h  hid_device_le_prf.c  hidd_le_prf_int.h
main/: CMakeLists.txt  bluetooth.c  bluetooth.h  constants.h  encoding.c  encoding.h  filter.c  filter.h  haptics.c  haptics.h  iir_filter.c  iir_filter.h  main.c  old_filter.c  old_filter.h  remote_config.c  remote_config.h  sensors.c  sensors.h  state.c  state.h
util/: log01  logidle  parse.py  sensorlogutf16
